fix slider overflow

--- a/_assets/styles/_custom.scss
+++ b/_assets/styles/_custom.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700|Roboto:300,400');
 
-html, body {
+html, body, #carousel {
   overflow-x: hidden;
 }
 
